Fixed the padding issue.  Still need better centering and responsive rendering on mobile screens.

--- a/client/main.less
+++ b/client/main.less
@@ -44,13 +44,13 @@ a:hover {
   color: #FFF !important;
 }
 
-
 /**
 * NAVBAR / MASTHEAD
 */
 
 .masthead-container {
-    max-width: 1024px;
+    //   max-width: 1024px;
+    padding: 0 0;
     margin: 0 auto;
 }
 
@@ -85,10 +85,10 @@ a:hover {
 
 /* Main content panel */
 .main-content {
+    top: 100;
   margin: 0 auto;
   padding-left: 0px;
-  padding-top: 20%;
-  max-width: 1024px;
+//  max-width: 1200px;
   font-style: normal;
   text-align: left;
 }
